argocd/technitium/technitium.yaml
# ########################################################## INGRESS ROUTES

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: technitium-ingress
  namespace: technitium
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`technitium.andreiboghean.com`)
      services:
        - name: technitium-dns-technitium-dnsserver
          port: 80
#     I've decided I dont actually care about setting up DOH
#     - kind: Rule
#       match: Host(`technitium.andreiboghean.com`) && Path(`/dns-query`)
#       services:
#         - name: technitium-dns-technitium-dnsserver
#           port: 8053
  tls:
    certResolver: default
